--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                             required
                         >
                     </fieldset>
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <button class="mobileSearchButton">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
                     <input
                         class="pointer"
                         id="searchButton"
@@ -93,7 +95,7 @@
                 <section id="lodging">
                     <h2 class="title">Hébergements à Marseille</h2>
                     <div class="lodgingCardContainer">
-                        <a href="#" class="card">
+                        <a href="#" class="card medium">
                             <img src="assets/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
                             <article class="description">
                                 <h3>Auberge La Canebière</h3>
@@ -107,7 +109,7 @@
                                 </span>
                             </article>
                         </a>
-                        <a href="#" class="card">
+                        <a href="#" class="card medium">
                             <img src="assets/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel du port">
                             <article class="description">
                                 <h3>Hôtel du port</h3>
@@ -121,7 +123,7 @@
                                 </span>
                             </article>
                         </a>
-                        <a href="#" class="card">
+                        <a href="#" class="card medium">
                             <img src="assets/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hotel Les mouettes">
                             <article class="description">
                                 <h3>Hôtel Les mouettes</h3>
@@ -135,7 +137,7 @@
                                 </span>
                             </article>
                         </a>
-                        <a href="#" class="card">
+                        <a href="#" class="card medium">
                             <img src="assets/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hotel de la mer">
                             <article class="description">
                                 <h3>Hôtel de la mer</h3>
@@ -149,7 +151,7 @@
                                 </span>
                             </article>
                         </a>
-                        <a href="#" class="card">
+                        <a href="#" class="card medium">
                             <img src="assets/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
                             <article class="description">
                                 <h3>Auberge Le Panier</h3>
@@ -163,7 +165,7 @@
                                 </span>
                             </article>
                         </a>
-                        <a href="#" class="card">
+                        <a href="#" class="card medium">
                             <img src="assets/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hotel Chez Amina">
                             <article class="description">
                                 <h3>Hôtel Chez Amina</h3>
