modifications après soutenance

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
         <link rel="stylesheet" href="css/styles.css">
         <script src="https://kit.fontawesome.com/6bdb92acba.js" crossorigin="anonymous"></script>
         <title>Booki</title>
@@ -11,7 +11,7 @@
         <header>
             <img src="assets/logo/Booki@3x.png" alt="logo Booki" id="bookiLogo">
             <nav id="navMenu">
-                <a href="#lodging" class="selectedNavButton pointer">Hébergements</a>
+                <a href="#lodging" class="navButton pointer">Hébergements</a>
                 <a href="#activities" class="navButton pointer">Activités</a>
             </nav>
         </header>
